--- a/generators/app/templates/_gradle/_build.gradle
+++ b/generators/app/templates/_gradle/_build.gradle
@@ -9,14 +9,17 @@ buildscript {
 
     dependencies {
         classpath "com.enonic.xp:gradle-plugin:${xpVersion}"
+        <% if (webpack) { %>
         classpath "com.moowork.gradle:gradle-node-plugin:0.11"
+        <% } %>
     }
 }
 
 apply plugin: 'maven'
 apply plugin: 'com.enonic.xp.app'
+<% if (webpack) { %>
 apply plugin: 'com.moowork.node'
-
+<% } %>
 
 app {
     name = project.appName
